Fix HSP and reference bugs
Fixes:
Adding/Removing reference removes HSPs added post initial modal selection from URL
Adding HSPs via table removes reference_id from URL
HSP close 'x' does not work as expected
Closing system/baseline where reference_id is set does not remove reference_id from URL
Baseline marked as reference doesn't persist when adding more systems/baselines
HSPs selector gets truncated on system selection modal

--- a/src/App.scss
+++ b/src/App.scss
@@ -86,6 +86,10 @@
     background-color: rgb(237, 237, 237);
   }
 
+  .historical-system-profile-dropdown {
+    max-height: 21px;
+  }
+
   .historical-system-profile-header {
     border-top: 1px solid #CCC;
     background-color: #f9e0a2;
@@ -296,10 +300,6 @@
     }
   }
 
-  .historical-system-profile-dropdown {
-    max-height: 21px;
-  }
-
   .hsp-dropdown-icon {
     color: #0066CC;
   }
@@ -333,6 +333,13 @@
   min-width: 900px;
   max-width: 1200px;
   max-height: 600px;
+}
+
+.add-system-modal-dropdowns {
+  .pf-c-dropdown__menu {
+    max-height: 200px;
+    overflow-y: auto;
+  }
 }
 
 .drift-toolbar {
